# git-global

./: .git_global_config_simple.toml  .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  build.rs
assets/: style.toml
benches/: sync_status.rs  tokio_new_status.rs
examples/: macro_hash.rs
src/: cli.rs  core.rs  lib.rs  main.rs
src/cli/: declaration.rs  interpretation.rs  mod.rs
src/core/: config.rs  core.rs  errors.rs  mod.rs  repo.rs  result.rs
src/macros/: hash_num.rs  mod.rs  rc_mut.rs  utils.rs
src/models/: action.rs  action_set.rs  config.rs  errors.rs  focus_ring.rs  light_table.rs  mod.rs  repo.rs  repo_tag.rs  repowrap.rs  result.rs  settings.rs  utils.rs
src/new_core/: config.rs  mod.rs  repo.rs  result.rs
src/queries/: tags.json
src/repo/: action.rs  action_set.rs  config.rs  errors.rs  focus_ring.rs  light_table.rs  mod.rs  repo.rs  repo_tag.rs  result.rs  utils.rs
src/subcommands/: actions.rs  add_tags.rs  bullshit.rs  clean.rs  filter.rs  github.rs  info.rs  list.rs  list_tags.rs  mod.rs  new_scan.rs  new_status.rs  prompt.rs  prompt_cursive.rs  prompt_iced.rs  prompt_tui.rs  scan.rs  status.rs  sync_status.rs  tag.rs  tag_projects.rs  tag_projects_2019.rs  tag_projects_lazy.rs  tag_projects_nova.rs  tag_projects_redo.rs  tag_projects_simple.rs  tag_projects_three.rs  tag_projects_two.rs  utilities.rs
src/subcommands/repos/: select.rs
tests/: repo.rs  subcommands.rs
tests/utils/: mod.rs
