[package]

name = "git-global"
version = "0.1.1"
authors = ["Eric Petersen <eric@ericpetersen.io>"]
description = "Keep track of all your git repositories."
edition = "2018"

homepage = "https://github.com/peap/git-global"
repository = "https://github.com/peap/git-global"
documentation = "https://docs.rs/git-global"

license = "MIT"
readme = "README.md"

keywords = ["git"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"

[[bin]]
name = "git-global-hal"
doc = false
path = "src/main.rs"

[[bench]]
name = "tokio_new_status"
harness = false

[[bench]]
name = "sync_status"
harness = false

[lib]
[dependencies]
app_dirs = "1.2.1"
clap = "2.33.1"
chrono = "0.4.11"
colored = "1.9.3"
crossbeam-channel = "0.4.2"
futures = "0.3.5"
itertools = "0.9.0"
json = "0.12.4"
lazy_static = "1.4.0"
mut_static = "5.0.0"
tui = "0.9.4"
termion = "1.5.5"
walkdir = "2.3.1"
jwalk = "0.5.1"
github-rs = "0.7.0"
ring_queue = "0.2.0"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
strfmt = "0.1.6"
subprocess = "0.2.4"
pipeline = "0.5.0"
rustfix = "0.5.1"
dirs = "2.0.2"
pretty_env_logger = "0.4.0"
log = "0.4.8"
take_mut = "0.2.2"
icecream = "0.1.0"
config = "0.10.1"
anyhow = "1.0.30"
thiserror = "1.0.17"
tokio = { version = "0.2.21", features = ["full"] }
precision = "0.1.10"
iced = "0.1.1"
toml = "0.5.6"

[dependencies.cursive]
version = "0.14.1"
default-features = false
features = ["termion-backend", "toml"]

[dependencies.git2]
version = "0.13.5"
default-features = false  # don't want SSH/HTTPS/Curl

[dev-dependencies]
tempdir = "0.3.7"
proptest = "0.9.6"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.7.3"
criterion = { version = "0.3.2", features = ['real_blackbox'] }

[build-dependencies]
clap = "2.33.1"
# json = "0.11"
