[package]

name = "git-global"
version = "0.1.1"
authors = ["Eric Petersen <eric@ericpetersen.io>"]
description = "Keep track of all your git repositories."
edition = "2018"

homepage = "https://github.com/peap/git-global"
repository = "https://github.com/peap/git-global"
documentation = "https://docs.rs/git-global"

license = "MIT"
readme = "README.md"

keywords = ["git"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"

[[bin]]
name = "git-global-hal"
doc = false
path = "src/main.rs"

[[bench]]
name = "tokio_new_status"
harness = false

[[bench]]
name = "sync_status"
harness = false

[lib]
[dependencies]
app_dirs = "1.2.1"
clap = "2.33.3"
chrono = "0.4.19"
colored = "2.0.0"
crossbeam-channel = "0.4.4"
futures = "0.3.8"
itertools = "0.9.0"
json = "0.12.4"
lazy_static = "1.4.0"
mut_static = "5.0.0"
tui = "0.13.0"
termion = "1.5.5"
walkdir = "2.3.1"
jwalk = "0.5.1"
github-rs = "0.7.0"
ring_queue = "0.2.0"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
strfmt = "0.1.6"
subprocess = "0.2.6"
pipeline = "0.5.0"
rustfix = "0.5.1"
dirs = "3.0.1"
pretty_env_logger = "0.4.0"
log = "0.4.11"
take_mut = "0.2.2"
icecream = "0.1.0"
config = "0.10.1"
anyhow = "1.0.36"
thiserror = "1.0.22"
tokio = { version = "1.0.0", features = ["full"] }
precision = "0.1.11"
iced = "0.2.0"
iced_core = "0.3.0"
toml = "0.5.8"

[dependencies.cursive]
version = "0.15.0"
default-features = false
features = ["termion-backend", "toml"]

[dependencies.git2]
version = "0.13.14"
default-features = false  # don't want SSH/HTTPS/Curl

[dev-dependencies]
tempdir = "0.3.7"
proptest = "0.10.1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.8.0"
criterion = { version = "0.3.3", features = ['real_blackbox'] }

[build-dependencies]
clap = "2.33.3"
# json = "0.11"
